--- a/sass/components/_exp.scss
+++ b/sass/components/_exp.scss
@@ -14,14 +14,4 @@
         font-weight: lighter !important;
     }
 
-    &__company-1 {
-
-    }
-
-    &__company-2 {
-    }
-
-    &__company-3 {
-    }
-
 }
