--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -9,6 +9,7 @@
     justify-content: flex-end;
 
     &__brand {
+        z-index:1000;
         padding: 2rem;
         align-self: center;
     }
@@ -20,7 +21,7 @@
         justify-content: flex-end;
         align-items: center;
         flex:1;
-                
+
         & > * {
             height: 100%;
             padding-inline: 2rem;
